TbaMUD is currently being developed by The Builder Academy. If you need any
help, find any bugs, or have ideas for improvement please stop by TBA at 
telnet://tbamud.com:9091 or email rumble@tbamud.com --Rumble
 
tbaMUD 3.56
[May 08 2008] - Rumble
  Cleaned up numerous warnings found by adding -Wextra -Wcast-qual -Wshadow -Wno-unused flags.
[May 05 2008] - Rumble
  Changed command do_list_llog_entries to normal function, it was not being used as a command. (thanks Rhade)
  Removed several useless if checks. (thanks Elanthis)
  Fixed zmalloc to work on 64 bit machines.
[May 04 2008] - Rumble
  Fixed numerous warnings for gcc -g -O2 -W -Wshadow -Wcast-qual flags.
  Fixed zpurge mudlog to use zone vnum not rnum. (thanks Jamdog)
  Fix to parse_mobile conversion to 128 bits. (thanks Jamdog)
  Changed autorun.sh from 9091 to 4000. (thanks John Smith)
[Apr 27 2008] - Rumble
  Removed some defunct gemote code. (thanks Fizban)
[Apr 26 2008] - Rumble
  Added README.BSD. (thanks Blix)
  Cleaned up act.comm.c, mobs can now use comm channels. (thanks Rhade)
[Apr 07 2008] - Rumble
  Fixed typos in lib/misc/messages and socials.new
[Apr 04 2008] - jeremyosborne
  Minor Bugfix: All game configuration settings now reference the world config
structure, not the individual config variables found in config.c.
[Mar 22 2008] - Rumble
  Added lib/world/qst/ directory, index, index.mini, and 0.qst.
[Mar 08 2008] - jeremyosborne
  Bugfix: the include directory (for .h files) is now referenced correctly in 
the depend statement.
  Deletion: listrent.c removed as a separate utility.
[Mar 07 2008] - jeremyosborne
  Enhancement: utils/ Makefile will now use a depends file, and looks for 
dependencies in the ../ directory (shrinks the necessary information to make 
each utility).
[Mar 06 2008] - Rumble
  Made TBA specific changes. do_cheat, removed help level checking, and 
advance to level 32 (these will be removed for releases).
[Mar 05 2008] - jeremyosborne